--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^8.4.3",
     "shortid": "^2.2.16",
     "user-agent": "^1.0.4",
-    "useragent": "^2.3.0"
+    "useragent": "^2.3.0",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
